parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> if_else_instr
Rule 7     instruction -> while_instr
Rule 8     instruction -> for_instr
Rule 9     instruction -> break_instr
Rule 10    instruction -> continue_instr
Rule 11    instruction -> return_instr
Rule 12    instruction -> print_instr
Rule 13    instruction -> instr_block
Rule 14    instruction -> assignment ;
Rule 15    if_else_instr -> IF ( expression ) instruction
Rule 16    if_else_instr -> IF ( expression ) instruction ELSE instruction
Rule 17    if_else_instr -> IF ( error ) instruction
Rule 18    if_else_instr -> IF ( error ) instruction ELSE instruction
Rule 19    while_instr -> WHILE ( expression ) instruction
Rule 20    while_instr -> WHILE ( error ) instruction
Rule 21    for_instr -> FOR for_init instruction
Rule 22    for_init -> ID = expression : expression
Rule 23    break_instr -> BREAK ;
Rule 24    continue_instr -> CONTINUE ;
Rule 25    return_instr -> RETURN expression ;
Rule 26    print_instr -> PRINT print_vars ;
Rule 27    print_instr -> PRINT error ;
Rule 28    print_vars -> print_vars , print_var
Rule 29    print_vars -> print_var
Rule 30    print_var -> STRING
Rule 31    print_var -> expression
Rule 32    instr_block -> { instructions }
Rule 33    number -> INT
Rule 34    number -> FLOAT
Rule 35    lvalue -> ID
Rule 36    lvalue -> ID [ INT ]
Rule 37    lvalue -> ID [ INT , INT ]
Rule 38    assignment -> lvalue assign_op expression
Rule 39    assign_op -> =
Rule 40    assign_op -> PLUSASSIGN
Rule 41    assign_op -> MINUSASSIGN
Rule 42    assign_op -> MULASSIGN
Rule 43    assign_op -> DIVASSIGN
Rule 44    expression -> number
Rule 45    expression -> lvalue
Rule 46    expression -> matrix_init
Rule 47    expression -> ( expression )
Rule 48    expression -> - expression
Rule 49    expression -> expression '
Rule 50    expression -> expression bin_op expression
Rule 51    bin_op -> rel_op
Rule 52    bin_op -> num_op
Rule 53    bin_op -> dot_op
Rule 54    rel_op -> <
Rule 55    rel_op -> >
Rule 56    rel_op -> EQ
Rule 57    rel_op -> NEQ
Rule 58    rel_op -> LESSEQ
Rule 59    rel_op -> MOREEQ
Rule 60    num_op -> +
Rule 61    num_op -> -
Rule 62    num_op -> *
Rule 63    num_op -> /
Rule 64    dot_op -> DOTPLUS
Rule 65    dot_op -> DOTMINUS
Rule 66    dot_op -> DOTMUL
Rule 67    dot_op -> DOTDIV
Rule 68    matrix_init -> eye
Rule 69    matrix_init -> ones
Rule 70    matrix_init -> zeros
Rule 71    matrix_init -> [ matrix_rows ]
Rule 72    matrix_init -> [ scopes ]
Rule 73    eye -> EYE ( INT )
Rule 74    ones -> ONES ( INT )
Rule 75    zeros -> ZEROS ( INT )
Rule 76    matrix_rows -> matrix_rows ; row_elems
Rule 77    matrix_rows -> row_elems
Rule 78    row_elems -> row_elems , number
Rule 79    row_elems -> number
Rule 80    scopes -> scope
Rule 81    scopes -> scopes ; scope
Rule 82    scope -> INT : INT
Rule 83    scope -> number : number : number

Terminals, with rules where they appear

'                    : 49
(                    : 15 16 17 18 19 20 47 73 74 75
)                    : 15 16 17 18 19 20 47 73 74 75
*                    : 62
+                    : 60
,                    : 28 37 78
-                    : 48 61
/                    : 63
:                    : 22 82 83 83
;                    : 14 23 24 25 26 27 76 81
<                    : 54
=                    : 22 39
>                    : 55
BREAK                : 23
CONTINUE             : 24
DIVASSIGN            : 43
DOTDIV               : 67
DOTMINUS             : 65
DOTMUL               : 66
DOTPLUS              : 64
ELSE                 : 16 18
EQ                   : 56
EYE                  : 73
FLOAT                : 34
FOR                  : 21
ID                   : 22 35 36 37
IF                   : 15 16 17 18
INT                  : 33 36 37 37 73 74 75 82 82
LESSEQ               : 58
MINUSASSIGN          : 41
MOREEQ               : 59
MULASSIGN            : 42
NEQ                  : 57
ONES                 : 74
PLUSASSIGN           : 40
PRINT                : 26 27
RETURN               : 25
STRING               : 30
WHILE                : 19 20
ZEROS                : 75
[                    : 36 37 71 72
]                    : 36 37 71 72
error                : 17 18 20 27
{                    : 32
}                    : 32

Nonterminals, with rules where they appear

assign_op            : 38
assignment           : 14
bin_op               : 50
break_instr          : 9
continue_instr       : 10
dot_op               : 53
expression           : 15 16 19 22 22 25 31 38 47 48 49 50 50
eye                  : 68
for_init             : 21
for_instr            : 8
if_else_instr        : 6
instr_block          : 13
instruction          : 4 5 15 16 16 17 18 18 19 20 21
instructions         : 2 4 32
instructions_opt     : 1
lvalue               : 38 45
matrix_init          : 46
matrix_rows          : 71 76
num_op               : 52
number               : 44 78 79 83 83 83
ones                 : 69
print_instr          : 12
print_var            : 28 29
print_vars           : 26 28
program              : 0
rel_op               : 51
return_instr         : 11
row_elems            : 76 77 78
scope                : 80 81
scopes               : 72 81
while_instr          : 7
zeros                : 70

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . if_else_instr
    (7) instruction -> . while_instr
    (8) instruction -> . for_instr
    (9) instruction -> . break_instr
    (10) instruction -> . continue_instr
    (11) instruction -> . return_instr
    (12) instruction -> . print_instr
    (13) instruction -> . instr_block
    (14) instruction -> . assignment ;
    (15) if_else_instr -> . IF ( expression ) instruction
    (16) if_else_instr -> . IF ( expression ) instruction ELSE instruction
    (17) if_else_instr -> . IF ( error ) instruction
    (18) if_else_instr -> . IF ( error ) instruction ELSE instruction
    (19) while_instr -> . WHILE ( expression ) instruction
    (20) while_instr -> . WHILE ( error ) instruction
    (21) for_instr -> . FOR for_init instruction
    (23) break_instr -> . BREAK ;
    (24) continue_instr -> . CONTINUE ;
    (25) return_instr -> . RETURN expression ;
    (26) print_instr -> . PRINT print_vars ;
    (27) print_instr -> . PRINT error ;
    (32) instr_block -> . { instructions }
    (38) assignment -> . lvalue assign_op expression
    (35) lvalue -> . ID
    (36) lvalue -> . ID [ INT ]
    (37) lvalue -> . ID [ INT , INT ]

    $end            reduce using rule 3 (instructions_opt -> .)
    IF              shift and go to state 18
    WHILE           shift and go to state 12
    FOR             shift and go to state 1
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 5
    RETURN          shift and go to state 23
    PRINT           shift and go to state 14
    {               shift and go to state 9
    ID              shift and go to state 10

    program                        shift and go to state 2
    while_instr                    shift and go to state 19
    instructions_opt               shift and go to state 13
    print_instr                    shift and go to state 11
    lvalue                         shift and go to state 4
    instructions                   shift and go to state 15
    instr_block                    shift and go to state 16
    for_instr                      shift and go to state 17
    return_instr                   shift and go to state 7
    continue_instr                 shift and go to state 6
    instruction                    shift and go to state 20
    if_else_instr                  shift and go to state 21
    assignment                     shift and go to state 8
    break_instr                    shift and go to state 3

state 1

    (21) for_instr -> FOR . for_init instruction
    (22) for_init -> . ID = expression : expression

    ID              shift and go to state 24

    for_init                       shift and go to state 25

state 2

    (0) S' -> program .



state 3

    (9) instruction -> break_instr .

    IF              reduce using rule 9 (instruction -> break_instr .)
    WHILE           reduce using rule 9 (instruction -> break_instr .)
    FOR             reduce using rule 9 (instruction -> break_instr .)
    BREAK           reduce using rule 9 (instruction -> break_instr .)
    CONTINUE        reduce using rule 9 (instruction -> break_instr .)
    RETURN          reduce using rule 9 (instruction -> break_instr .)
    PRINT           reduce using rule 9 (instruction -> break_instr .)
    {               reduce using rule 9 (instruction -> break_instr .)
    ID              reduce using rule 9 (instruction -> break_instr .)
    $end            reduce using rule 9 (instruction -> break_instr .)
    }               reduce using rule 9 (instruction -> break_instr .)
    ELSE            reduce using rule 9 (instruction -> break_instr .)


state 4

    (38) assignment -> lvalue . assign_op expression
    (39) assign_op -> . =
    (40) assign_op -> . PLUSASSIGN
    (41) assign_op -> . MINUSASSIGN
    (42) assign_op -> . MULASSIGN
    (43) assign_op -> . DIVASSIGN

    =               shift and go to state 29
    PLUSASSIGN      shift and go to state 31
    MINUSASSIGN     shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 26

    assign_op                      shift and go to state 30

state 5

    (24) continue_instr -> CONTINUE . ;

    ;               shift and go to state 32


state 6

    (10) instruction -> continue_instr .

    IF              reduce using rule 10 (instruction -> continue_instr .)
    WHILE           reduce using rule 10 (instruction -> continue_instr .)
    FOR             reduce using rule 10 (instruction -> continue_instr .)
    BREAK           reduce using rule 10 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 10 (instruction -> continue_instr .)
    RETURN          reduce using rule 10 (instruction -> continue_instr .)
    PRINT           reduce using rule 10 (instruction -> continue_instr .)
    {               reduce using rule 10 (instruction -> continue_instr .)
    ID              reduce using rule 10 (instruction -> continue_instr .)
    $end            reduce using rule 10 (instruction -> continue_instr .)
    }               reduce using rule 10 (instruction -> continue_instr .)
    ELSE            reduce using rule 10 (instruction -> continue_instr .)


state 7

    (11) instruction -> return_instr .

    IF              reduce using rule 11 (instruction -> return_instr .)
    WHILE           reduce using rule 11 (instruction -> return_instr .)
    FOR             reduce using rule 11 (instruction -> return_instr .)
    BREAK           reduce using rule 11 (instruction -> return_instr .)
    CONTINUE        reduce using rule 11 (instruction -> return_instr .)
    RETURN          reduce using rule 11 (instruction -> return_instr .)
    PRINT           reduce using rule 11 (instruction -> return_instr .)
    {               reduce using rule 11 (instruction -> return_instr .)
    ID              reduce using rule 11 (instruction -> return_instr .)
    $end            reduce using rule 11 (instruction -> return_instr .)
    }               reduce using rule 11 (instruction -> return_instr .)
    ELSE            reduce using rule 11 (instruction -> return_instr .)


state 8

    (14) instruction -> assignment . ;

    ;               shift and go to state 33


state 9

    (32) instr_block -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . if_else_instr
    (7) instruction -> . while_instr
    (8) instruction -> . for_instr
    (9) instruction -> . break_instr
    (10) instruction -> . continue_instr
    (11) instruction -> . return_instr
    (12) instruction -> . print_instr
    (13) instruction -> . instr_block
    (14) instruction -> . assignment ;
    (15) if_else_instr -> . IF ( expression ) instruction
    (16) if_else_instr -> . IF ( expression ) instruction ELSE instruction
    (17) if_else_instr -> . IF ( error ) instruction
    (18) if_else_instr -> . IF ( error ) instruction ELSE instruction
    (19) while_instr -> . WHILE ( expression ) instruction
    (20) while_instr -> . WHILE ( error ) instruction
    (21) for_instr -> . FOR for_init instruction
    (23) break_instr -> . BREAK ;
    (24) continue_instr -> . CONTINUE ;
    (25) return_instr -> . RETURN expression ;
    (26) print_instr -> . PRINT print_vars ;
    (27) print_instr -> . PRINT error ;
    (32) instr_block -> . { instructions }
    (38) assignment -> . lvalue assign_op expression
    (35) lvalue -> . ID
    (36) lvalue -> . ID [ INT ]
    (37) lvalue -> . ID [ INT , INT ]

    IF              shift and go to state 18
    WHILE           shift and go to state 12
    FOR             shift and go to state 1
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 5
    RETURN          shift and go to state 23
    PRINT           shift and go to state 14
    {               shift and go to state 9
    ID              shift and go to state 10

    print_instr                    shift and go to state 11
    while_instr                    shift and go to state 19
    break_instr                    shift and go to state 3
    lvalue                         shift and go to state 4
    instructions                   shift and go to state 34
    instr_block                    shift and go to state 16
    for_instr                      shift and go to state 17
    continue_instr                 shift and go to state 6
    return_instr                   shift and go to state 7
    instruction                    shift and go to state 20
    if_else_instr                  shift and go to state 21
    assignment                     shift and go to state 8

state 10

    (35) lvalue -> ID .
    (36) lvalue -> ID . [ INT ]
    (37) lvalue -> ID . [ INT , INT ]

    ;               reduce using rule 35 (lvalue -> ID .)
    '               reduce using rule 35 (lvalue -> ID .)
    <               reduce using rule 35 (lvalue -> ID .)
    >               reduce using rule 35 (lvalue -> ID .)
    EQ              reduce using rule 35 (lvalue -> ID .)
    NEQ             reduce using rule 35 (lvalue -> ID .)
    LESSEQ          reduce using rule 35 (lvalue -> ID .)
    MOREEQ          reduce using rule 35 (lvalue -> ID .)
    +               reduce using rule 35 (lvalue -> ID .)
    -               reduce using rule 35 (lvalue -> ID .)
    *               reduce using rule 35 (lvalue -> ID .)
    /               reduce using rule 35 (lvalue -> ID .)
    DOTPLUS         reduce using rule 35 (lvalue -> ID .)
    DOTMINUS        reduce using rule 35 (lvalue -> ID .)
    DOTMUL          reduce using rule 35 (lvalue -> ID .)
    DOTDIV          reduce using rule 35 (lvalue -> ID .)
    =               reduce using rule 35 (lvalue -> ID .)
    PLUSASSIGN      reduce using rule 35 (lvalue -> ID .)
    MINUSASSIGN     reduce using rule 35 (lvalue -> ID .)
    MULASSIGN       reduce using rule 35 (lvalue -> ID .)
    DIVASSIGN       reduce using rule 35 (lvalue -> ID .)
    )               reduce using rule 35 (lvalue -> ID .)
    ,               reduce using rule 35 (lvalue -> ID .)
    :               reduce using rule 35 (lvalue -> ID .)
    IF              reduce using rule 35 (lvalue -> ID .)
    WHILE           reduce using rule 35 (lvalue -> ID .)
    FOR             reduce using rule 35 (lvalue -> ID .)
    BREAK           reduce using rule 35 (lvalue -> ID .)
    CONTINUE        reduce using rule 35 (lvalue -> ID .)
    RETURN          reduce using rule 35 (lvalue -> ID .)
    PRINT           reduce using rule 35 (lvalue -> ID .)
    {               reduce using rule 35 (lvalue -> ID .)
    ID              reduce using rule 35 (lvalue -> ID .)
    [               shift and go to state 35


state 11

    (12) instruction -> print_instr .

    IF              reduce using rule 12 (instruction -> print_instr .)
    WHILE           reduce using rule 12 (instruction -> print_instr .)
    FOR             reduce using rule 12 (instruction -> print_instr .)
    BREAK           reduce using rule 12 (instruction -> print_instr .)
    CONTINUE        reduce using rule 12 (instruction -> print_instr .)
    RETURN          reduce using rule 12 (instruction -> print_instr .)
    PRINT           reduce using rule 12 (instruction -> print_instr .)
    {               reduce using rule 12 (instruction -> print_instr .)
    ID              reduce using rule 12 (instruction -> print_instr .)
    $end            reduce using rule 12 (instruction -> print_instr .)
    }               reduce using rule 12 (instruction -> print_instr .)
    ELSE            reduce using rule 12 (instruction -> print_instr .)


state 12

    (19) while_instr -> WHILE . ( expression ) instruction
    (20) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 36


state 13

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 14

    (26) print_instr -> PRINT . print_vars ;
    (27) print_instr -> PRINT . error ;
    (28) print_vars -> . print_vars , print_var
    (29) print_vars -> . print_var
    (30) print_var -> . STRING
    (31) print_var -> . expression
    (44) expression -> . number
    (45) expression -> . lvalue
    (46) expression -> . matrix_init
    (47) expression -> . ( expression )
    (48) expression -> . - expression
    (49) expression -> . expression '
    (50) expression -> . expression bin_op expression
    (33) number -> . INT
    (34) number -> . FLOAT
    (35) lvalue -> . ID
    (36) lvalue -> . ID [ INT ]
    (37) lvalue -> . ID [ INT , INT ]
    (68) matrix_init -> . eye
    (69) matrix_init -> . ones
    (70) matrix_init -> . zeros
    (71) matrix_init -> . [ matrix_rows ]
    (72) matrix_init -> . [ scopes ]
    (73) eye -> . EYE ( INT )
    (74) ones -> . ONES ( INT )
    (75) zeros -> . ZEROS ( INT )

    error           shift and go to state 48
    STRING          shift and go to state 42
    (               shift and go to state 40
    -               shift and go to state 46
    INT             shift and go to state 38
    FLOAT           shift and go to state 44
    ID              shift and go to state 10
    [               shift and go to state 37
    EYE             shift and go to state 54
    ONES            shift and go to state 53
    ZEROS           shift and go to state 51

    matrix_init                    shift and go to state 49
    ones                           shift and go to state 50
    print_vars                     shift and go to state 39
    expression                     shift and go to state 52
    lvalue                         shift and go to state 41
    number                         shift and go to state 43
    eye                            shift and go to state 45
    zeros                          shift and go to state 47
    print_var                      shift and go to state 55

state 15

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . if_else_instr
    (7) instruction -> . while_instr
    (8) instruction -> . for_instr
    (9) instruction -> . break_instr
    (10) instruction -> . continue_instr
    (11) instruction -> . return_instr
    (12) instruction -> . print_instr
    (13) instruction -> . instr_block
    (14) instruction -> . assignment ;
    (15) if_else_instr -> . IF ( expression ) instruction
    (16) if_else_instr -> . IF ( expression ) instruction ELSE instruction
    (17) if_else_instr -> . IF ( error ) instruction
    (18) if_else_instr -> . IF ( error ) instruction ELSE instruction
    (19) while_instr -> . WHILE ( expression ) instruction
    (20) while_instr -> . WHILE ( error ) instruction
    (21) for_instr -> . FOR for_init instruction
    (23) break_instr -> . BREAK ;
    (24) continue_instr -> . CONTINUE ;
    (25) return_instr -> . RETURN expression ;
    (26) print_instr -> . PRINT print_vars ;
    (27) print_instr -> . PRINT error ;
    (32) instr_block -> . { instructions }
    (38) assignment -> . lvalue assign_op expression
    (35) lvalue -> . ID
    (36) lvalue -> . ID [ INT ]
    (37) lvalue -> . ID [ INT , INT ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    IF              shift and go to state 18
    WHILE           shift and go to state 12
    FOR             shift and go to state 1
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 5
    RETURN          shift and go to state 23
    PRINT           shift and go to state 14
    {               shift and go to state 9
    ID              shift and go to state 10

    print_instr                    shift and go to state 11
    while_instr                    shift and go to state 19
    break_instr                    shift and go to state 3
    lvalue                         shift and go to state 4
    instr_block                    shift and go to state 16
    for_instr                      shift and go to state 17
    continue_instr                 shift and go to state 6
    return_instr                   shift and go to state 7
    instruction                    shift and go to state 56
    if_else_instr                  shift and go to state 21
    assignment                     shift and go to state 8

state 16

    (13) instruction -> instr_block .

    IF              reduce using rule 13 (instruction -> instr_block .)
    WHILE           reduce using rule 13 (instruction -> instr_block .)
    FOR             reduce using rule 13 (instruction -> instr_block .)
    BREAK           reduce using rule 13 (instruction -> instr_block .)
    CONTINUE        reduce using rule 13 (instruction -> instr_block .)
    RETURN          reduce using rule 13 (instruction -> instr_block .)
    PRINT           reduce using rule 13 (instruction -> instr_block .)
    {               reduce using rule 13 (instruction -> instr_block .)
    ID              reduce using rule 13 (instruction -> instr_block .)
    $end            reduce using rule 13 (instruction -> instr_block .)
    }               reduce using rule 13 (instruction -> instr_block .)
    ELSE            reduce using rule 13 (instruction -> instr_block .)


state 17

    (8) instruction -> for_instr .

    IF              reduce using rule 8 (instruction -> for_instr .)
    WHILE           reduce using rule 8 (instruction -> for_instr .)
    FOR             reduce using rule 8 (instruction -> for_instr .)
    BREAK           reduce using rule 8 (instruction -> for_instr .)
    CONTINUE        reduce using rule 8 (instruction -> for_instr .)
    RETURN          reduce using rule 8 (instruction -> for_instr .)
    PRINT           reduce using rule 8 (instruction -> for_instr .)
    {               reduce using rule 8 (instruction -> for_instr .)
    ID              reduce using rule 8 (instruction -> for_instr .)
    $end            reduce using rule 8 (instruction -> for_instr .)
    }               reduce using rule 8 (instruction -> for_instr .)
    ELSE            reduce using rule 8 (instruction -> for_instr .)


state 18

    (15) if_else_instr -> IF . ( expression ) instruction
    (16) if_else_instr -> IF . ( expression ) instruction ELSE instruction
    (17) if_else_instr -> IF . ( error ) instruction
    (18) if_else_instr -> IF . ( error ) instruction ELSE instruction

    (               shift and go to state 57


state 19

    (7) instruction -> while_instr .

    IF              reduce using rule 7 (instruction -> while_instr .)
    WHILE           reduce using rule 7 (instruction -> while_instr .)
    FOR             reduce using rule 7 (instruction -> while_instr .)
    BREAK           reduce using rule 7 (instruction -> while_instr .)
    CONTINUE        reduce using rule 7 (instruction -> while_instr .)
    RETURN          reduce using rule 7 (instruction -> while_instr .)
    PRINT           reduce using rule 7 (instruction -> while_instr .)
    {               reduce using rule 7 (instruction -> while_instr .)
    ID              reduce using rule 7 (instruction -> while_instr .)
    $end            reduce using rule 7 (instruction -> while_instr .)
    }               reduce using rule 7 (instruction -> while_instr .)
    ELSE            reduce using rule 7 (instruction -> while_instr .)


state 20

    (5) instructions -> instruction .

    }               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)


state 21

    (6) instruction -> if_else_instr .

    IF              reduce using rule 6 (instruction -> if_else_instr .)
    WHILE           reduce using rule 6 (instruction -> if_else_instr .)
    FOR             reduce using rule 6 (instruction -> if_else_instr .)
    BREAK           reduce using rule 6 (instruction -> if_else_instr .)
    CONTINUE        reduce using rule 6 (instruction -> if_else_instr .)
    RETURN          reduce using rule 6 (instruction -> if_else_instr .)
    PRINT           reduce using rule 6 (instruction -> if_else_instr .)
    {               reduce using rule 6 (instruction -> if_else_instr .)
    ID              reduce using rule 6 (instruction -> if_else_instr .)
    $end            reduce using rule 6 (instruction -> if_else_instr .)
    }               reduce using rule 6 (instruction -> if_else_instr .)
    ELSE            reduce using rule 6 (instruction -> if_else_instr .)


state 22

    (23) break_instr -> BREAK . ;

    ;               shift and go to state 58


state 23

    (25) return_instr -> RETURN . expression ;
    (44) expression -> . number
    (45) expression -> . lvalue
    (46) expression -> . matrix_init
    (47) expression -> . ( expression )
    (48) expression -> . - expression
    (49) expression -> . expression '
    (50) expression -> . expression bin_op expression
    (33) number -> . INT
    (34) number -> . FLOAT
    (35) lvalue -> . ID
    (36) lvalue -> . ID [ INT ]
    (37) lvalue -> . ID [ INT , INT ]
    (68) matrix_init -> . eye
    (69) matrix_init -> . ones
    (70) matrix_init -> . zeros
    (71) matrix_init -> . [ matrix_rows ]
    (72) matrix_init -> . [ scopes ]
    (73) eye -> . EYE ( INT )
    (74) ones -> . ONES ( INT )
    (75) zeros -> . ZEROS ( INT )

    (               shift and go to state 40
    -               shift and go to state 46
    INT             shift and go to state 38
    FLOAT           shift and go to state 44
    ID              shift and go to state 10
    [               shift and go to state 37
    EYE             shift and go to state 54
    ONES            shift and go to state 53
    ZEROS           shift and go to state 51

    matrix_init                    shift and go to state 49
    eye                            shift and go to state 45
    ones                           shift and go to state 50
    zeros                          shift and go to state 47
    expression                     shift and go to state 59
    lvalue                         shift and go to state 41
    number                         shift and go to state 43

state 24

    (22) for_init -> ID . = expression : expression

    =               shift and go to state 60


state 25

    (21) for_instr -> FOR for_init . instruction
    (6) instruction -> . if_else_instr
    (7) instruction -> . while_instr
    (8) instruction -> . for_instr
    (9) instruction -> . break_instr
    (10) instruction -> . continue_instr
    (11) instruction -> . return_instr
    (12) instruction -> . print_instr
    (13) instruction -> . instr_block
    (14) instruction -> . assignment ;
    (15) if_else_instr -> . IF ( expression ) instruction
    (16) if_else_instr -> . IF ( expression ) instruction ELSE instruction
    (17) if_else_instr -> . IF ( error ) instruction
    (18) if_else_instr -> . IF ( error ) instruction ELSE instruction
    (19) while_instr -> . WHILE ( expression ) instruction
    (20) while_instr -> . WHILE ( error ) instruction
    (21) for_instr -> . FOR for_init instruction
    (23) break_instr -> . BREAK ;
    (24) continue_instr -> . CONTINUE ;
    (25) return_instr -> . RETURN expression ;
    (26) print_instr -> . PRINT print_vars ;
    (27) print_instr -> . PRINT error ;
    (32) instr_block -> . { instructions }
    (38) assignment -> . lvalue assign_op expression
    (35) lvalue -> . ID
    (36) lvalue -> . ID [ INT ]
    (37) lvalue -> . ID [ INT , INT ]

    IF              shift and go to state 18
    WHILE           shift and go to state 12
    FOR             shift and go to state 1
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 5
    RETURN          shift and go to state 23
    PRINT           shift and go to state 14
    {               shift and go to state 9
    ID              shift and go to state 10

    print_instr                    shift and go to state 11
    while_instr                    shift and go to state 19
    break_instr                    shift and go to state 3
    lvalue                         shift and go to state 4
    if_else_instr                  shift and go to state 21
    instr_block                    shift and go to state 16
    for_instr                      shift and go to state 17
    continue_instr                 shift and go to state 6
    return_instr                   shift and go to state 7
    instruction                    shift and go to state 61
    assignment                     shift and go to state 8

state 26

    (43) assign_op -> DIVASSIGN .

    (               reduce using rule 43 (assign_op -> DIVASSIGN .)
    -               reduce using rule 43 (assign_op -> DIVASSIGN .)
    INT             reduce using rule 43 (assign_op -> DIVASSIGN .)
    FLOAT           reduce using rule 43 (assign_op -> DIVASSIGN .)
    ID              reduce using rule 43 (assign_op -> DIVASSIGN .)
    [               reduce using rule 43 (assign_op -> DIVASSIGN .)
    EYE             reduce using rule 43 (assign_op -> DIVASSIGN .)
    ONES            reduce using rule 43 (assign_op -> DIVASSIGN .)
    ZEROS           reduce using rule 43 (assign_op -> DIVASSIGN .)


state 27

    (41) assign_op -> MINUSASSIGN .

    (               reduce using rule 41 (assign_op -> MINUSASSIGN .)
    -               reduce using rule 41 (assign_op -> MINUSASSIGN .)
    INT             reduce using rule 41 (assign_op -> MINUSASSIGN .)
    FLOAT           reduce using rule 41 (assign_op -> MINUSASSIGN .)
    ID              reduce using rule 41 (assign_op -> MINUSASSIGN .)
    [               reduce using rule 41 (assign_op -> MINUSASSIGN .)
    EYE             reduce using rule 41 (assign_op -> MINUSASSIGN .)
    ONES            reduce using rule 41 (assign_op -> MINUSASSIGN .)
    ZEROS           reduce using rule 41 (assign_op -> MINUSASSIGN .)


state 28

    (42) assign_op -> MULASSIGN .

    (               reduce using rule 42 (assign_op -> MULASSIGN .)
    -               reduce using rule 42 (assign_op -> MULASSIGN .)
    INT             reduce using rule 42 (assign_op -> MULASSIGN .)
    FLOAT           reduce using rule 42 (assign_op -> MULASSIGN .)
    ID              reduce using rule 42 (assign_op -> MULASSIGN .)
    [               reduce using rule 42 (assign_op -> MULASSIGN .)
    EYE             reduce using rule 42 (assign_op -> MULASSIGN .)
    ONES            reduce using rule 42 (assign_op -> MULASSIGN .)
    ZEROS           reduce using rule 42 (assign_op -> MULASSIGN .)


state 29

    (39) assign_op -> = .

    (               reduce using rule 39 (assign_op -> = .)
    -               reduce using rule 39 (assign_op -> = .)
    INT             reduce using rule 39 (assign_op -> = .)
    FLOAT           reduce using rule 39 (assign_op -> = .)
    ID              reduce using rule 39 (assign_op -> = .)
    [               reduce using rule 39 (assign_op -> = .)
    EYE             reduce using rule 39 (assign_op -> = .)
    ONES            reduce using rule 39 (assign_op -> = .)
    ZEROS           reduce using rule 39 (assign_op -> = .)


state 30

    (38) assignment -> lvalue assign_op . expression
    (44) expression -> . number
    (45) expression -> . lvalue
    (46) expression -> . matrix_init
    (47) expression -> . ( expression )
    (48) expression -> . - expression
    (49) expression -> . expression '
    (50) expression -> . expression bin_op expression
    (33) number -> . INT
    (34) number -> . FLOAT
    (35) lvalue -> . ID
    (36) lvalue -> . ID [ INT ]
    (37) lvalue -> . ID [ INT , INT ]
    (68) matrix_init -> . eye
    (69) matrix_init -> . ones
    (70) matrix_init -> . zeros
    (71) matrix_init -> . [ matrix_rows ]
    (72) matrix_init -> . [ scopes ]
    (73) eye -> . EYE ( INT )
    (74) ones -> . ONES ( INT )
    (75) zeros -> . ZEROS ( INT )

    (               shift and go to state 40
    -               shift and go to state 46
    INT             shift and go to state 38
    FLOAT           shift and go to state 44
    ID              shift and go to state 10
    [               shift and go to state 37
    EYE             shift and go to state 54
    ONES            shift and go to state 53
    ZEROS           shift and go to state 51

    matrix_init                    shift and go to state 49
    eye                            shift and go to state 45
    ones                           shift and go to state 50
    zeros                          shift and go to state 47
    expression                     shift and go to state 62
    lvalue                         shift and go to state 41
    number                         shift and go to state 43

state 31

    (40) assign_op -> PLUSASSIGN .

    (               reduce using rule 40 (assign_op -> PLUSASSIGN .)
    -               reduce using rule 40 (assign_op -> PLUSASSIGN .)
    INT             reduce using rule 40 (assign_op -> PLUSASSIGN .)
    FLOAT           reduce using rule 40 (assign_op -> PLUSASSIGN .)
    ID              reduce using rule 40 (assign_op -> PLUSASSIGN .)
    [               reduce using rule 40 (assign_op -> PLUSASSIGN .)
    EYE             reduce using rule 40 (assign_op -> PLUSASSIGN .)
    ONES            reduce using rule 40 (assign_op -> PLUSASSIGN .)
    ZEROS           reduce using rule 40 (assign_op -> PLUSASSIGN .)


state 32

    (24) continue_instr -> CONTINUE ; .

    IF              reduce using rule 24 (continue_instr -> CONTINUE ; .)
    WHILE           reduce using rule 24 (continue_instr -> CONTINUE ; .)
    FOR             reduce using rule 24 (continue_instr -> CONTINUE ; .)
    BREAK           reduce using rule 24 (continue_instr -> CONTINUE ; .)
    CONTINUE        reduce using rule 24 (continue_instr -> CONTINUE ; .)
    RETURN          reduce using rule 24 (continue_instr -> CONTINUE ; .)
    PRINT           reduce using rule 24 (continue_instr -> CONTINUE ; .)
    {               reduce using rule 24 (continue_instr -> CONTINUE ; .)
    ID              reduce using rule 24 (continue_instr -> CONTINUE ; .)
    $end            reduce using rule 24 (continue_instr -> CONTINUE ; .)
    }               reduce using rule 24 (continue_instr -> CONTINUE ; .)
    ELSE            reduce using rule 24 (continue_instr -> CONTINUE ; .)


state 33

    (14) instruction -> assignment ; .
